# starlette-django

./: .gitignore  Makefile  docker-compose.prod.yaml  docker-compose.yaml
docker/nginx/: Dockerfile
docker/nginx/conf.d.dev/: app.conf
docker/nginx/conf.d.prod/: app.conf
docker/python/: Dockerfile
src/: pyproject.toml
src/admin/config/: settings.py
src/application/: Makefile  main.py
src/application/app/controllers/: sample_controller.py  todo_controller.py  user_controller.py
src/application/app/domain/models/todo/: todo_repository.py  todo_service.py
src/application/app/domain/usecases/: todo_usecase.py
src/application/libs/: controller.py  database.py  routing.py  server.py
